fixed later steps, stuck on collision

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
 }
 
@@ -22,4 +23,12 @@ h1 {
 
   color: transparent;
   text-shadow: 0 0 4px white;
+}
+
+p {
+  position: absolute;
+  margin: 0;
+  top: 35px;
+  right: 5px;
+  color: #aaa;
 }
